Actions
Bug #12627
closedseattle: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors on SPARC with NULL pointer:
../../../sun4u/seattle/os/seattle.c: In function 'startup_platform': ../../../sun4u/seattle/os/seattle.c:55: error: incompatible type for argument 3 of 'mutex_init' ../../../common/sys/mutex.h:88: note: expected 'kmutex_type_t' but argument is of type 'void *'
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 44da0df0d621255604c6a72b29e72219d50a76d6
commit 44da0df0d621255604c6a72b29e72219d50a76d6 Author: Toomas Soome <tsoome@me.com> Date: 2020-05-10T07:37:39.000Z 12627 seattle: NULL pointer errors Reviewed by: C Fraire <cfraire@me.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>
Actions